Solve overflow bug

--- a/scss/global/_global.scss
+++ b/scss/global/_global.scss
@@ -1,8 +1,12 @@
+main {
+    overflow: hidden;
+}
+
 body {
-  background-color: var(--clr-neutral-200);
+    background-color: var(--clr-neutral-200);
 }
 
 :focus {
-  outline: 2px solid var(--clr-neutral-700);
-  outline-offset: 0.15rem;
+    outline: 2px solid var(--clr-neutral-700);
+    outline-offset: 0.15rem;
 }
