--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ h6 {
   overflow-wrap: break-word;
 }
 
+main {
+  overflow: hidden;
+}
+
 body {
   background-color: var(--clr-neutral-200);
 }
